vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__composite_types__tests__array_type_declaration_with_discrete_range-2.snap
---
source: vhdl_syntax/src/parser/productions/composite_types.rs
expression: "to_test_text(Parser::type_declaration,\n\"type constrained_int_arr_2d is array (10 downto 5, 'A' to 'B', enum_t'range) of bit;\")"
---
FullTypeDeclaration
  Keyword(Type)
  Identifier 'constrained_int_arr_2d'
  Keyword(Is)
  ConstrainedArrayDefinition
    Keyword(Array)
    IndexConstraint
      ParenthesizedIndexConstraintItems
        LeftPar
        IndexConstraintItems
          RawTokens
            AbstractLiteral '10'
            Keyword(Downto)
            AbstractLiteral '5'
          Comma
          RawTokens
            CharacterLiteral ''A''
            Keyword(To)
            CharacterLiteral ''B''
          Comma
          RawTokens
            Identifier 'enum_t'
            Tick
            Keyword(Range)
        RightPar
    Keyword(Of)
    SubtypeIndication
      Name
        Identifier 'bit'
  SemiColon
